--- a/internal/projects/bulleit/Interfaces/RootTabBarViewController.xib
+++ b/internal/projects/bulleit/Interfaces/RootTabBarViewController.xib
@@ -65,7 +65,7 @@
 								<string key="IBUITitle">Stamps</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">tab_stamps_button_active.png</string>
+									<string key="NSResourceName">tab_stamps_button_ios4.png</string>
 								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<reference key="IBUITabBar" ref="729558307"/>
@@ -74,7 +74,7 @@
 								<string key="IBUITitle">News</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">tab_news_button_active.png</string>
+									<string key="NSResourceName">tab_news_button_ios4.png</string>
 								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<reference key="IBUITabBar" ref="729558307"/>
@@ -89,7 +89,7 @@
 								<string key="IBUITitle">To-Do</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">tab_todo_button_active.png</string>
+									<string key="NSResourceName">tab_todo_button_ios4.png</string>
 								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<reference key="IBUITabBar" ref="729558307"/>
@@ -98,7 +98,7 @@
 								<string key="IBUITitle">People</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">tab_people_button_active.png</string>
+									<string key="NSResourceName">tab_people_button_ios4.png</string>
 								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<reference key="IBUITabBar" ref="729558307"/>
@@ -108,7 +108,7 @@
 					<object class="IBUIImageView" id="385876063">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{138, 363}, {44, 44}}</string>
+						<string key="NSFrame">{{138, 365}, {44, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
@@ -123,7 +123,7 @@
 					<object class="IBUIButton" id="562149913">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">301</int>
-						<string key="NSFrame">{{130, 358}, {60, 60}}</string>
+						<string key="NSFrame">{{130, 360}, {60, 60}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="385876063"/>
@@ -737,10 +737,10 @@
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>newstamp_btn.png</string>
-				<string>tab_news_button_active.png</string>
-				<string>tab_people_button_active.png</string>
-				<string>tab_stamps_button_active.png</string>
-				<string>tab_todo_button_active.png</string>
+				<string>tab_news_button_ios4.png</string>
+				<string>tab_people_button_ios4.png</string>
+				<string>tab_stamps_button_ios4.png</string>
+				<string>tab_todo_button_ios4.png</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
